Individual page, fixed contrasts and duplicate id values

--- a/webapp/src/main/webapp/themes/vitro/css/vitroTheme.css
+++ b/webapp/src/main/webapp/themes/vitro/css/vitroTheme.css
@@ -1205,7 +1205,7 @@ h1.fn .display-title {
     border-left: 1px solid #a6b1b0;
 }
 ul#individual-tools {
-    color: #8AA149;
+    color: #536520;
 }
 ul#individual-tools li{
     float: left;
@@ -1220,7 +1220,7 @@ ul#individual-tools-people {
     color: #47b6d0;
 }
 ul#individual-tools {
-    color: #8AA149
+    color: #536520
 }
 #share-contact a.email,
 #share-contact a.tel,
